Introduce VoteLedger, snapshots and refactor I/O
Replace legacy DB/dispatch layers with a durable, serialized VoteLedger and lock-free VoteSnapshots. Move config and messages to immutable candidate/apply model (ConfigService, PluginConfig, MessageService), add VoteEnvelope/VotePlan for provider-snapshotting, and GrantDispatcher as the single runtime command writer. Improve sound/message handling, command thread-safety and admin UX, add thorough unit tests and an OPERATIONS.md doc. Also update README, resources and build (shadowJar service merge). These changes harden persistence, migration, concurrency and testability.